# Apoyo-finanzas-SAT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: campos_sat.md
scripts/: install_kde_app.sh  install_local_tesseract.sh
src/pfinanzas/: __main__.py
src/pfinanzas/core/: db.py  models.py  paths.py
src/pfinanzas/services/: cfdi.py  ocr.py  reports.py
src/pfinanzas/ui/: main_window.py
tests/: test_cfdi_parser.py  test_ocr_parser.py  test_receipt_store.py
